:wrench: update git blog part 2

--- a/blog/themes/fluid/layout/post.ejs
+++ b/blog/themes/fluid/layout/post.ejs
@@ -96,3 +96,17 @@ page.banner_img_height = theme.post.banner_img_height
     </div>
   </div>
 <% } %>
+
+<!-- Mermaid -->
+<% if(page.mermaid && theme.post.mermaid.enable) { %>
+    <script src="<%- url_for(theme.post.mermaid.cdn) %>"></script>
+    <script>
+
+    if (window.mermaid) {
+      mermaid.initialize({theme: 'forest'});
+    }
+<!--     if (window.mermaid) { -->
+<!--       mermaid.initialize( <%- JSON.stringify(theme.post.mermaid.options) %>); -->
+<!--     } -->
+    </script>
+<% } %>
