--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -14,6 +14,7 @@ import { slugifyStr } from "@/utils/slugify";
 import IconChevronLeft from "@/assets/icons/IconChevronLeft.svg";
 import IconChevronRight from "@/assets/icons/IconChevronRight.svg";
 import { SITE } from "@/config";
+import Comments from "../components/Comments.astro";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -157,6 +158,7 @@ const nextPost =
       }
     </div>
   </main>
+  <Comments />
   <Footer />
 </Layout>
 
