--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,21 +7,14 @@ import Socials from "@/components/Socials.astro";
 import LinkButton from "@/components/LinkButton.astro";
 import Card from "@/components/Card.astro";
 import Hr from "@/components/Hr.astro";
-import getSortedPosts from "@/utils/getSortedPosts";
+import { getSortedContentPosts } from "@/utils/getSortedPosts";
 import IconRss from "@/assets/icons/IconRss.svg";
 import IconArrowRight from "@/assets/icons/IconArrowRight.svg";
 import { SITE } from "@/config";
 import { SOCIALS } from "@/constants";
 
 const posts = await getCollection("blog");
-// 定义要排除的标签列表
-const excludedTags = ['deep research'];
-// 过滤掉包含任意一个 excludedTags 的文章
-const filteredPosts = posts.filter(({ data }) => 
-  !data.tags?.some((tag: string) => excludedTags.includes(tag))
-);
-
-const sortedPosts = getSortedPosts(filteredPosts);
+const sortedPosts = getSortedContentPosts(posts);
 const featuredPosts = sortedPosts.filter(({ data }) => data.featured);
 const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
 ---
